copied spotify's color scheme

--- a/index.html
+++ b/index.html
@@ -35,27 +35,25 @@
           <div class="hidden-lg-up mobile-search">
             <form class="form-group no-margins" id="mobile-search-form">
               <div class="input-group">
+                <span class="input-group-addon" id="basic-addon1"><i class="fa fa-search"></i></span>
                 <input type="text" class="form-control" id="mobile-search-bar" placeholder="Search for...">
-                <span class="input-group-btn">
-                  <button class="btn btn-success" type="submit"><i class="fa fa-search"></i></button>
-                </span>
               </div>
             </form>
           </div>
-        <h4 class="now-playing-header hidden-md-down">Now Playing</h4>
-          <div class="row now-playing no-gutters" data-toggle="tooltip" data-placement="bottom" title="Song requested by: Shane">
+          <div class="row now-playing no-gutters">
             <div class="album-holder col-4 col-md-3">
               <img class="img-thumbnail album" src="https://placeholdit.imgix.net/~text?txtsize=72&txt=Nothing%20Playing&w=640&h=640"/>
             </div>
             <div class="description col-8 col-md-9">
-              <h5 class="mt-0 song">Song Title</h5>
-              <p class="artist">Artist</p>
+              <h5 class="mt-0 song">Nothing Playing</h5>
+              <p class="artist">Request songs to get the party started!</p>
             </div>
           </div>
-          <div class="song-queue">
+          <div class="song-queue list-group">
           </div>
         </div>
-        <div class="col-xl-9 col-lg-8 bg-danger hidden-md-down"></div>
+        <div class="desktop-search col-xl-7 col-lg-8 hidden-md-down"></div>
+        <div class="right-sidebar col-xl-2 hidden-lg-down"></div>
       </div>
     </div>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
