fixed centering bug

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="description col-8 col-md-9">
               <h5 class="mt-0 song">Nothing Playing</h5>
-              <p class="artist">Request songs to get the party started!</p>
+              <p class="no-margins artist">Request songs to get the party started!</p>
             </div>
           </div>
           <div class="song-queue list-group">
