album search done

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <script src="js/utils.js"></script>
     <script src="js/desktop_search.js"></script>
     <script src="js/artist_search.js"></script>
+    <script src="js/album_search.js"></script>
     <script src="js/mobile_search.js"></script>
     <script src="js/refresh_queue.js"></script>
     <script src="js/route_handler.js"></script>
