--- a/index.html
+++ b/index.html
@@ -11,6 +11,32 @@
   </head>
   <body>
     <div class="container-fluid" style="height:100vh; padding:0;">
+      <!-- Username input -->
+      <div class="modal fade inverse" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="loginModalLabel">Set Nickname</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form id="login-form">
+                <div class="form-group">
+                  <label for="recipient-name" class="form-control-label">Nickname:</label>
+                  <input type="text" class="form-control" id="nickname">
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-primary" id="set-nick">Set Name</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End username input -->
       <div class="overlay hidden-lg-up" id="mobile-search">
         <a href="#" class="close closebtn text-white hidden-xs-up">&times;</a>
 
@@ -41,8 +67,8 @@
             </form>
           </div>
           <div class="row now-playing no-gutters">
-            <div class="album-holder col-4 col-md-3">
-              <img class="img-thumbnail album hidden-xs-up" />
+            <div class="album-holder col-4 col-md-3 hidden-xs-up">
+              <img class="img-thumbnail album" />
             </div>
             <div class="description col-8 col-md-9">
               <h5 class="mt-0 song"></h5>
@@ -72,7 +98,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="js/tablesorter.js"></script>
     <script src="js/font_awesome.js"></script>
-    <script src="js/notify.min.js"></script>
+    <script src="js/notify.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/desktop_search.js"></script>
     <script src="js/artist_search.js"></script>
